1.5.2 (...)
-----------

- MySQL 5.5: The test suite was freezing in checkBackwardTimeTravel. Fixed.

1.5.1 (2011-11-12)
------------------

- Packing: Lowered garbage collection object reference finding log level to
  debug; this stage takes mere seconds, even in large sites, but could produce
  10s of thousands of lines of log output.

- RelStorage was opening a test database connection (and was leaving it
  idle in a transaction with recent ZODB versions that support
  IMVCCStorage.) RelStorage no longer opens that test connection.

- zodbconvert: Avoid holding a list of all transactions in memory.

- Just after installing the database schema, verify the schema was
  created correctly. This affects MySQL in particular.

1.5.0 (2011-06-30)
------------------

- PostgreSQL: Fixed another minor compatibility issue with PostgreSQL 9.0.
  Packing raised an error when the client used old an version of libpq.

- Delete empty transactions in batches of 1000 rows instead of all in one
  go, to prevent holding the transaction lock for longer than absolutely
  necessary.

- Oracle: Fix object reference downloading performance for large RelStorage
  databases during the garbage collection phase of a pack.

- Oracle, PostgreSQL: Switch to storing ZODB blob in chunks up to 4GB
  (the maximum supported by cx_Oracle) or 2GB (PostgreSQL maximum blob size)
  to maximize blob reading and writing performance.
  
  The PostgreSQL blob_chunk schema changed to support this, see 
  notes/migrate-to-1.5.txt to update existing databases.

- zodbconvert: When copying a database containing blobs, ensure the source
  blob file exists long enough to copy it.

1.5.0b2 (2011-03-02)
--------------------

- Better packing based on experience with large databases.  Thanks
  to Martijn Pieters!

    - Added more feedback to the packing process. It'll now report
      during batch commit how much of the total work has been
      completed, but at most every .1% of the total number of